--- a/reports/templates/po_summary.jrxml
+++ b/reports/templates/po_summary.jrxml
@@ -50,6 +50,12 @@
     <field name="facturasTexto" class="java.lang.String">
         <fieldDescription><![CDATA[facturasTexto]]></fieldDescription>
     </field>
+    <field name="notasVentaTexto" class="java.lang.String">
+        <fieldDescription><![CDATA[notasVentaTexto]]></fieldDescription>
+    </field>
+    <field name="cotizacionesTexto" class="java.lang.String">
+        <fieldDescription><![CDATA[cotizacionesTexto]]></fieldDescription>
+    </field>
     <field name="alertasTexto" class="java.lang.String">
         <fieldDescription><![CDATA[alertasTexto]]></fieldDescription>
     </field>
@@ -138,7 +144,7 @@
         </band>
     </columnHeader>
     <detail>
-        <band height="150" splitType="Stretch">
+        <band height="240" splitType="Stretch">
             <textField>
                 <reportElement x="0" y="0" width="70" height="16" uuid="15a7fb46-965c-4c48-b6d4-0e6f4f618e87"/>
                 <textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
@@ -199,14 +205,42 @@
                 <textFieldExpression><![CDATA[$F{facturasTexto}]]></textFieldExpression>
             </textField>
             <staticText>
-                <reportElement x="0" y="100" width="80" height="14" uuid="4cdf253c-a527-4d8d-927c-1cc09847f0a3"/>
+                <reportElement x="0" y="100" width="120" height="14" uuid="fd63b6f4-7546-4e56-9d0a-5a7a86f9d6d7"/>
+                <textElement>
+                    <font size="10" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Notas de venta]]></text>
+            </staticText>
+            <textField isStretchWithOverflow="true">
+                <reportElement x="0" y="116" width="250" height="50" uuid="9291a0ce-4b45-4d1d-92be-2aa052a4d0d3"/>
+                <textElement>
+                    <font size="9"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{notasVentaTexto}]]></textFieldExpression>
+            </textField>
+            <staticText>
+                <reportElement x="265" y="100" width="120" height="14" uuid="a483f3c1-2a79-4c32-86ec-38c4d30af3b9"/>
+                <textElement>
+                    <font size="10" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Cotizaciones]]></text>
+            </staticText>
+            <textField isStretchWithOverflow="true">
+                <reportElement x="265" y="116" width="250" height="50" uuid="f0492b1f-98b0-42bf-a098-0f61c8a2f541"/>
+                <textElement>
+                    <font size="9"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{cotizacionesTexto}]]></textFieldExpression>
+            </textField>
+            <staticText>
+                <reportElement x="0" y="170" width="80" height="14" uuid="4cdf253c-a527-4d8d-927c-1cc09847f0a3"/>
                 <textElement>
                     <font size="10" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Alertas]]></text>
             </staticText>
             <textField isStretchWithOverflow="true">
-                <reportElement x="0" y="116" width="515" height="34" uuid="747b31b1-5d5e-4f25-86f9-5e1b5eafb409"/>
+                <reportElement x="0" y="186" width="515" height="50" uuid="747b31b1-5d5e-4f25-86f9-5e1b5eafb409"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
