--- a/renderer/style.css
+++ b/renderer/style.css
@@ -221,7 +221,7 @@ canvas {
 
 .chart-wrapper canvas {
   width: 100% !important;
-  height: auto !important;
+  height: 100% !important;
   display: block;
 }
 
